@@ -6,6 +6,9 @@
        just to a repo->repo copy. (Stefan)
 - ADD: If the "check for updates" can't connect to the
        repository, just show the local status. (Stefan)
+- ADD: The "Add to ignore list" now has a submenu with
+       the filename and the filemask (e.g. "*.tmp")
+       as its entries. (Stefan)
 - CHG: The Repository Browser now sorts the date column
        by the real date, not the text. (Stefan)
 - BUG: Authentication when viewing remote properties lead
